# alpha-stack

./: .gitignore  README.md  alpha_stack_parallel_gen.py  alphadjango_og.py  alphagogin.py  alpharust.py  alphat3.py  check_mbpp_ids.py  dependency_resolver.py  dfs_feedback.py  dfs_tree_gen.py  docker_testing.py  folder_tree.py  gen_file.py  genai_client.py  install.bat  install.sh  package-lock.json  package.json  projects_metadata.json  prompt.py  prompt_manager.py  pyproject.toml  requirements.txt  test.py  test_dockerfile_validator.py  test_mermaid.py  test_runner.py  user_prompt.txt
.alphastack-venv/: pyvenv.cfg
alpha<stack>/components/Karyaksham/Pravaah/backend/: pyproject.toml
alpha<stack>/components/Karyaksham/Pravaah/backend/src/karyaksham_api/: __init__.py  main.py
alpha<stack>/components/Karyaksham/Pravaah/backend/src/karyaksham_workers/: celery_app.py
alpha<stack>/components/Karyaksham/Pravaah/rust_engine/: Cargo.toml
alpha<stack>/components/Karyaksham/Pravaah/rust_engine/src/: lib.rs
alpha<stack>/components/Karyaksham/Pravaah/rust_engine/src/core/: data_processor.rs  file_handler.rs  mod.rs
alpha<stack>/components/Karyaksham/Pravaah/rust_engine/src/utils/: error.rs
alpha<stack>/components/Pravah/Pravaah/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pravah  pyproject.toml
alpha<stack>/components/Pravah/Pravaah/.github/workflows/: cd.yml  ci.yml
alpha<stack>/components/Pravah/Pravaah/app/: __init__.py  cli.py  main.py
alpha<stack>/components/Pravah/Pravaah/app/api/v1/: __init__.py  dependencies.py  schemas.py
alpha<stack>/components/Pravah/Pravaah/app/auth/: __init__.py  dependencies.py  jwt.py  rbac.py
alpha<stack>/components/Pravah/Pravaah/app/core/: __init__.py  jobs.py  processor.py
alpha<stack>/components/Pravah/Pravaah/app/db/: __init__.py  session.py
alpha<stack>/components/Pravah/Pravaah/app/db/migrations/: alembic.ini  env.py  script.py.mako  versions
alpha<stack>/components/Pravah/Pravaah/app/db/models/: __init__.py  job.py  user.py
alpha<stack>/components/Pravah/Pravaah/app/services/: storage.py
alpha<stack>/components/Pravah/Pravaah/app/utils/: __init__.py  logging.py
alpha<stack>/components/Pravah/Pravaah/config/: settings.py
alpha<stack>/components/Pravah/Pravaah/docs/: architecture.md  user_guide.md
alpha<stack>/components/Pravah/Pravaah/docs/api/: openapi.json
alpha<stack>/components/Pravah/Pravaah/k8s/base/: deployment.yaml  service.yaml
alpha<stack>/components/Pravah/Pravaah/k8s/overlays/production/: configmap.yaml  kustomization.yaml
alpha<stack>/components/Pravah/Pravaah/k8s/overlays/staging/: configmap.yaml  kustomization.yaml
alpha<stack>/components/Pravah/Pravaah/pravah_core/: Cargo.toml
alpha<stack>/components/Pravah/Pravaah/pravah_core/src/: engine.rs  error.rs  lib.rs  models.rs
alpha<stack>/components/Pravah/Pravaah/scripts/: build.sh  run_dev.sh  setup.sh
alpha<stack>/components/Pravah/Pravaah/tests/: __init__.py  conftest.py
alpha<stack>/components/Pravah/Pravaah/tests/e2e/: __init__.py  test_full_workflow.py
alpha<stack>/components/Pravah/Pravaah/tests/integration/: __init__.py  test_api_endpoints.py  test_rust_bridge.py
alpha<stack>/components/Pravah/Pravaah/tests/unit/: __init__.py  test_jobs_core.py
alpha<stack>/components/Pravah/Pravaah/ui/react/: next.config.js  package.json
alpha<stack>/components/Pravah/Pravaah/ui/react/src/: pages
alpha<stack>/components/Pravah/Pravaah/ui/streamlit/: dashboard.py
alpha<stack>/components/Project Sanchay/Project Sanchay/: .dockerignore  .gitignore  README.md  project-sanchay  pyproject.toml
alpha<stack>/components/Project Sanchay/Project Sanchay/.github/workflows/: ci-cd.yml  lint.yml
alpha<stack>/components/Project Sanchay/Project Sanchay/assets/styles/: main.qss
alpha<stack>/components/Project Sanchay/Project Sanchay/config/: .env.example  __init__.py  default.py  development.py  production.py  settings.py
alpha<stack>/components/Project Sanchay/Project Sanchay/crates/sanchay_core/: Cargo.toml
alpha<stack>/components/Project Sanchay/Project Sanchay/docker/: Dockerfile  docker-compose.yml
alpha<stack>/components/Project Sanchay/Project Sanchay/docs/: api
alpha<stack>/components/Project Sanchay/Project Sanchay/docs/ADR/: 001-python-rust-hybrid-approach.md
alpha<stack>/components/Project Sanchay/Project Sanchay/docs/user_guide/: getting_started.md
alpha<stack>/components/Project Sanchay/Project Sanchay/scripts/: build.sh  clean.sh  release.sh
alpha<stack>/components/Project Sanchay/Project Sanchay/src/sanchay_app/: __init__.py  __main__.py  cli.py
alpha<stack>/components/Project Sanchay/Project Sanchay/tests/: __init__.py  conftest.py
alpha<stack>/components/Project Sanchay/Project Sanchay/tests/e2e/: test_full_scan.py
alpha<stack>/components/Project Sanchay/Project Sanchay/tests/integration/: __init__.py  test_rust_bridge.py
alpha<stack>/components/Project Sanchay/Project Sanchay/tests/unit/: __init__.py  test_job_manager.py  test_ui_widgets.py
alpha<stack>/components/VēgaFS/Pravaah/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  vegafs
alpha<stack>/components/VēgaFS/Pravaah/.github/workflows/: ci.yml
alpha<stack>/components/VēgaFS/Pravaah/crates/vegafs-core/: Cargo.toml  build.rs
alpha<stack>/components/VēgaFS/Pravaah/db/migrations/: README  env.py
alpha<stack>/components/VēgaFS/Pravaah/docs/: index.md
alpha<stack>/components/VēgaFS/Pravaah/docs/api/: reference.md
alpha<stack>/components/VēgaFS/Pravaah/docs/architecture/: data_flow.md
alpha<stack>/components/VēgaFS/Pravaah/k8s/base/: deployment.yaml  kustomization.yaml  service.yaml
alpha<stack>/components/VēgaFS/Pravaah/src/vegafs/: __init__.py  main.py
eval/eval_results/mbpp_task_17/: .dockerignore  Dockerfile  projects_metadata.json  pyproject.toml  sitecustomize.py
eval/eval_results/mbpp_task_17/solution/: __init__.py  solution.py
eval/eval_results/mbpp_task_17/tests/: conftest.py  solution.py  test_solution.py
src-pi/: tui.py  (+2 more)
(+530 files in other folders)
