[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alphastack"
version = "0.1.0"
description = "AI-powered project generator with Docker testing"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "AlphaStack Team"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "google-genai>=0.1.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.0",
    "networkx>=3.0",
    "rich>=13.0.0",
    "pyfiglet>=0.8.0",
    "prompt_toolkit>=3.0.0",
    "openai>=1.0.0",
    "pydantic>=2.0",
    "tree-sitter-languages>=1.10.0",
    "tree-sitter>=0.21.0,<0.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.0",
]

[project.scripts]
alphastack = "src.cli:main"

[project.urls]
Homepage = "https://github.com/alphastack/alphastack"
Documentation = "https://github.com/alphastack/alphastack#readme"
Repository = "https://github.com/alphastack/alphastack.git"
Issues = "https://github.com/alphastack/alphastack/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["src", "src.*"]

[tool.setuptools.package-data]
src = ["prompts/*.j2"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
line_length = 100
