[package]
name = "sanchay_core"
version = "0.1.0"
authors = ["Sanchay Project Team <dev@sanchay.com>"]
edition = "2021"
description = "High-performance Rust core engine for Project Sanchay, handling file processing and data manipulation."
license = "MIT"
repository = "https://github.com/project-sanchay/sanchay"
homepage = "https://github.com/project-sanchay/sanchay"
keywords = ["sanchay", "file", "processing", "python", "rust"]

[lib]
name = "sanchay_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.18.3", features = ["extension-module"] }
rayon = "1.8.1"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
walkdir = "2.5.0"
rusqlite = { version = "0.30.0", features = ["bundled", "limits", "functions"] }
thiserror = "1.4.1"
tokio = { version = "1.36.0", features = ["rt-multi-thread", "macros"], optional = true } # Marked optional as per "Optional" justification

[features]
# Feature for enabling Tokio if highly concurrent, non-blocking I/O is required.
# This allows the Python side to control if async capabilities are compiled in.
async-io = ["tokio"]