[package]
name = "vegafs-core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "rust_core"

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module"] }
tokio = { version = "1.37", features = ["full"] }
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
walkdir = "2.5"
log = "0.4"
env_logger = "0.11"